# django_sample

./: .dockerignore  Dockerfile  docker-compose.yml  pyproject.toml  run_uvicorn.py
.github/workflows/: django-ci.yml
DjangoSample/: asgi.py  fastapi_app.py  settings.py  urls.py  views.py  wsgi.py
api/: controllers.py  dependencies.py  mappers.py  models.py  repositories.py  schemas.py  services.py  tests.py
api/migrations/: 0001_initial.py  0002_seed_replacement_parts.py
sample/: controllers.py  dependencies.py  urls.py  views.py
sample/services/: apiservices.py  replacement.py
templates/: base.html  header.html  home.html  replacement_parts.html  sample.html
templates/sample/: add_replacement_part.html
