[tool.poetry]
name = "django-sample-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.14"
django = "^5.2.7"
psycopg2-binary = "^2.9.9"
fastapi= "^0.120.2"
uvicorn = {extras =["standard"], version ="0.38.0"}
gunicorn = "^23.0.0"
starlette = "^0.49.1"
sqlmodel = "0.0.27"


[build-system]
requires = ["poetry-core>=2.2.0"]
build-backend = "poetry.core.masonry.api"
